# Chatbot_Analyzing

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: bot.py  config.py  dispatcher.py  fsm.py
app/database/: __init__.py  functions.py  pool.py
app/handlers/: client_handlers.py  error_handling.py
app/keyboards/: __init__.py  inline_keyboards.py  reply_keyboards.py
app/logger/: __init__.py
our_message/: message_text.txt
tests/: test_basic.py
